switch to extension.json installation
https://github.com/SemanticMediaWiki/SemanticTasks/issues/4

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,29 @@
 {
+	"name": "mediawiki/semanitic-tasks",
+	"type": "mediawiki-extension",
+	"keywords": [
+		"smw",
+		"semantic mediawiki",
+		"wiki",
+		"mediawiki"
+	],
+	"homepage": "https://www.mediawiki.org/wiki/Extension:Semantic_Tasks",
+	"license": "GPL-2.0-or-later",
 	"require": {
-		"mediawiki/semantic-media-wiki": ">=1.7"
+		"mediawiki/semantic-media-wiki": ">=1.8",
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
 		"mediawiki/minus-x": "0.3.1"
+	},
+	"autoload": {
+		"files": [
+			"SemanticTasks.php"
+		],
+		"classmap": [
+			"SemanticTasks.classes.php"
+		]
 	},
 	"scripts": {
 		"test": [
