[broken] no hooks declaration and class registration in extension.json
https://github.com/SemanticMediaWiki/SemanticTasks/issues/4#issuecomment-487306098

Still give a "Fatal error: Uncaught UnexpectedValueException: callback 'SemanticTasks::initExtension' is not callable in /vagrant/mediawiki/includes/registration/ExtensionRegistry.php on line 367"

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 			"SemanticTasks.php"
 		],
 		"classmap": [
-			"SemanticTasks.classes.php"
+			"SemanticTasksMailer.php"
 		]
 	},
 	"scripts": {
