--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: php
 
+services:
+  - mysql
+
 matrix:
   fast_finish: true
   include:
-    - env: DB=mysql; MW=master; SMW=~3.0@dev
+    - env: DB=mysql; MW=master; PHPUNIT=6.5.*; SMW=~3.0@dev
       php: 7.1
-    - env: DB=sqlite; MW=REL1_31; SMW=~3.0; MERMAID=dev-master
+    - env: DB=sqlite; MW=REL1_31; SMW=~3.0;
       php: 7.0
     - env: DB=sqlite; MW=REL1_31; SMW=~3.0@dev
       php: 7.0
@@ -15,14 +18,14 @@ matrix:
       php: 7.2
   allow_failures:
     # Broken due to https://phabricator.wikimedia.org/T188840
-    - env: DB=mysql; MW=master; SMW=~3.0@dev
+    - env: DB=mysql; MW=master; PHPUNIT=6.5.*; SMW=~3.0@dev
 
 install:
-  - bash ./build/travis/install-mediawiki.sh
-  - bash ./build/travis/install-semantic-tasks.sh
+  - bash ./tests/travis/install-mediawiki.sh
+  - bash ./tests/travis/install-semantic-tasks.sh
 
 script:
-  - bash ./build/travis/run-tests.sh
+  - bash ./tests/travis/run-tests.sh
 
 cache:
   directories:
