--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
       php: 7.0
     - env: DB=mysql; MW=REL1_32; SMW=~3.0@dev
       php: 7.2
+    - env: DB=postgres; MW=REL1_33; SMW=~3.1
+      php: 7.2
     - env: DB=postgres; MW=REL1_33; SMW=~3.0@dev; TYPE=coverage
       php: 7.2
   allow_failures:
