run npm tests (json linting) with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
 
 script:
   - bash ./tests/travis/run-tests.sh
+  - npm run test
 
 after_success:
   - if [[ "$TYPE" != "coverage" ]]; then exit 0; fi
