--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,6 @@
 			"minus-x fix ."
 		],
 		"phpunit": "php ../../tests/phpunit/phpunit.php -c phpunit.xml.dist"
-	}
+	},
+	"minimum-stability": "dev"
 }
