--- a/composer.json
+++ b/composer.json
@@ -10,30 +10,41 @@
 	"homepage": "https://www.mediawiki.org/wiki/Extension:Semantic_Tasks",
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"mediawiki/semantic-media-wiki": "~3.0|~4.0"
+		"composer/installers": ">=1.0.1"
 	},
 	"require-dev": {
-		"jakub-onderka/php-parallel-lint": "1.0.0",
-		"jakub-onderka/php-console-highlighter": "0.3.2",
-		"mediawiki/minus-x": "0.3.1"
+		"mediawiki/mediawiki-codesniffer": "46.0.0",
+		"mediawiki/minus-x": "1.1.3",
+		"php-parallel-lint/php-console-highlighter": "1.0.0",
+		"php-parallel-lint/php-parallel-lint": "1.4.0"
 	},
-	"autoload": {
-		"psr-4": {
-			"ST\\": "src/"
-		},
-		"files": [
-			"SemanticTasks.php"
-		]
+	"config": {
+		"process-timeout": 0,
+		"allow-plugins": {
+			"composer/installers": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	},
 	"scripts": {
 		"test": [
-			"parallel-lint . --exclude vendor --exclude node_modules --exclude extensions",
-			"minus-x check ."
+			"@lint",
+			"@phpcs",
+			"@minus-x",
+			"@phpunit"
 		],
 		"fix": [
-			"minus-x fix ."
+			"minus-x fix .",
+			"@phpcs-fix"
 		],
-		"phpunit": "php ../../tests/phpunit/phpunit.php -c phpunit.xml.dist"
-	},
-	"minimum-stability": "dev"
+		"phpunit": "php ${MW_INSTALL_PATH:-../..}/tests/phpunit/phpunit.php -c phpunit.xml.dist",
+		"phpunit-coverage": "php ${MW_INSTALL_PATH:-../..}/tests/phpunit/phpunit.php -c phpunit.xml.dist --testdox --coverage-text --coverage-html coverage/php --coverage-clover coverage/php/coverage.xml",
+		"post-test-coverage": [
+			"sed -i 's|/var/www/html/extensions/SemanticTasks/||g' coverage/php/coverage.xml",
+			"find coverage/php -type f -name '*.html' -exec sed -i 's|/var/www/html/extensions/||g' {} +"
+		],
+		"phpcs": "phpcs -ps -d memory_limit=2G",
+		"phpcs-fix": "phpcbf -p",
+		"lint": "parallel-lint . --exclude vendor --exclude node_modules --exclude extensions",
+		"minus-x": "minus-x check ."
+	}
 }
